[tool.poetry]
name = "patchwork-bot"
version = "0.1.0"
description = "AI bot for playing patchwork"
authors = ["Angela Tao"]
readme = "README.md"
packages = [
    { include = "src"},
]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
